[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/tasks/zuk.gd" type="Script" id=1]
[ext_resource path="res://textures/zuk1.png" type="Texture" id=2]
[ext_resource path="res://textures/zuk2.png" type="Texture" id=3]
[ext_resource path="res://textures/komputer.png" type="Texture" id=4]
[ext_resource path="res://scripts/tasks/debugging.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="debugging" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 307.956
margin_top = 22.2236
margin_right = 1298.96
margin_bottom = 743.224
rect_scale = Vector2( 1.40896, 1.40896 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 527.207, 195.883 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 1440.33, 650.135 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 730.378, 351.905 )
scale = Vector2( 0.308069, 0.308069 )
frames = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="AnimatedSprite"]
margin_left = -188.0
margin_top = -284.0
margin_right = 176.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 1269.39, 423.382 )
scale = Vector2( 0.308069, 0.308069 )
frames = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="AnimatedSprite2"]
margin_left = -188.0
margin_top = -284.0
margin_right = 176.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 1060.85, 380.496 )
scale = Vector2( 0.308069, 0.308069 )
frames = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="AnimatedSprite3"]
margin_left = -188.0
margin_top = -284.0
margin_right = 176.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 887.625, 452.813 )
scale = Vector2( 0.308069, 0.308069 )
frames = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="AnimatedSprite4"]
margin_left = -188.0
margin_top = -284.0
margin_right = 176.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 958.261, 330.042 )
scale = Vector2( 0.308069, 0.308069 )
frames = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="AnimatedSprite5"]
margin_left = -188.0
margin_top = -284.0
margin_right = 176.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 991.897, 504.949 )
scale = Vector2( 0.308069, 0.308069 )
frames = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="AnimatedSprite6"]
margin_left = -188.0
margin_top = -284.0
margin_right = 176.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.4
[connection signal="timeout" from="Timer" to="AnimatedSprite" method="_on_Timer_timeout"]
[connection signal="pressed" from="AnimatedSprite/TextureButton" to="AnimatedSprite" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="AnimatedSprite2/TextureButton" to="AnimatedSprite2" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="AnimatedSprite3/TextureButton" to="AnimatedSprite3" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="AnimatedSprite4/TextureButton" to="AnimatedSprite4" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="AnimatedSprite5/TextureButton" to="AnimatedSprite5" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="AnimatedSprite6/TextureButton" to="AnimatedSprite6" method="_on_TextureButton_pressed"]
